# claw-cpp-code

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/api/include/: api.hpp  client.hpp  error.hpp  prompt_cache.hpp  sse.hpp  types.hpp
src/api/include/providers/: anthropic.hpp  mod.hpp  openai_compat.hpp
src/api/src/: client.cpp  error.cpp  prompt_cache.cpp  sse.cpp  types.cpp
src/api/src/providers/: anthropic.cpp  mod.cpp  openai_compat.cpp
src/commands/: CMakeLists.txt
src/commands/include/: commands.hpp  plugin_types.hpp  runtime_types.hpp
src/commands/src/: commands.cpp  plugin_types.cpp  runtime_types.cpp
src/commands/tests/: test_slash_commands.cpp
src/compat-harness/: CMakeLists.txt
src/compat-harness/include/: bootstrap.hpp  commands.hpp  compat_harness.hpp  tools.hpp
src/compat-harness/src/: compat_harness.cpp  compat_harness_test.cpp
src/mock-anthropic-service/: CMakeLists.txt
src/mock-anthropic-service/include/: mock_service.hpp  response_builder.hpp  scenario.hpp
src/mock-anthropic-service/src/: main.cpp  mock_anthropic_service.cpp  response_builder.cpp  scenario.cpp
src/plugins/: CMakeLists.txt
src/plugins/include/: hooks.hpp  plugin.hpp  plugin_error.hpp  plugin_manager.hpp  plugin_registry.hpp  plugin_tool.hpp  plugin_types.hpp
src/plugins/src/: hooks.cpp  plugin.cpp  plugin_error.cpp  plugin_manager.cpp  plugin_registry.cpp  plugin_tool.cpp  plugin_types.cpp
src/runtime/: CMakeLists.txt
src/runtime/include/: bash.hpp  bash_validation.hpp  bootstrap.hpp  branch_lock.hpp  compact.hpp  config.hpp  conversation.hpp  file_ops.hpp  green_contract.hpp  hooks.hpp  json_value.hpp  lane_events.hpp  lsp_client.hpp  mcp.hpp  mcp_client.hpp  mcp_lifecycle_hardened.hpp  mcp_stdio.hpp  mcp_tool_bridge.hpp  oauth.hpp  permission_enforcer.hpp  permissions.hpp  plugin_lifecycle.hpp  policy_engine.hpp  prompt.hpp  recovery_recipes.hpp  remote.hpp  sandbox.hpp  session.hpp  session_control.hpp  sse.hpp  stale_branch.hpp  summary_compression.hpp  task_packet.hpp  task_registry.hpp  team_cron_registry.hpp  trust_resolver.hpp  usage.hpp  worker_boot.hpp
src/runtime/src/: bash.cpp  bash_validation.cpp  bootstrap.cpp  branch_lock.cpp  compact.cpp  config.cpp  conversation.cpp  file_ops.cpp  green_contract.cpp  hooks.cpp  json_value.cpp  lane_events.cpp  lsp_client.cpp  mcp.cpp  mcp_client.cpp  mcp_lifecycle_hardened.cpp  mcp_stdio.cpp  mcp_tool_bridge.cpp  oauth.cpp  permission_enforcer.cpp  permissions.cpp  plugin_lifecycle.cpp  policy_engine.cpp  prompt.cpp  recovery_recipes.cpp  remote.cpp  sandbox.cpp  session.cpp  session_control.cpp  sse.cpp  stale_branch.cpp  summary_compression.cpp  task_packet.cpp  task_registry.cpp  team_cron_registry.cpp  trust_resolver.cpp  usage.cpp  worker_boot.cpp
src/rusty-claude-cli/: CMakeLists.txt
src/rusty-claude-cli/include/: app.hpp  args.hpp  init.hpp  input.hpp  render.hpp
src/rusty-claude-cli/src/: app.cpp  args.cpp  init.cpp  input.cpp  main.cpp  render.cpp
src/rusty-claude-cli/tests/: test_args.cpp  test_init.cpp  test_render.cpp
src/telemetry/: CMakeLists.txt
src/telemetry/include/: telemetry.hpp
src/telemetry/src/: telemetry.cpp
src/tools/: CMakeLists.txt
src/tools/include/: agent_tools.hpp  lane_completion.hpp  misc_tools.hpp  tool_executor.hpp  tool_registry.hpp  tool_specs.hpp  tool_types.hpp  web_tools.hpp
src/tools/src/: agent_tools.cpp  lane_completion.cpp  misc_tools.cpp  tool_executor.cpp  tool_registry.cpp  tool_specs.cpp  web_tools.cpp
src/utils/: CMakeLists.txt
src/utils/include/: git_ref_validation.hpp  win32_arg_escape.hpp
